adding paper.js coolness

--- a/client/css/sounder.styl
+++ b/client/css/sounder.styl
@@ -13,6 +13,7 @@ body
   height 100%
   background-size cover
   text-align center
+  // background: -webkit-linear-gradient(darken(white, 30%), white)
   // -webkit-trasition all 0.5s ease-out
 
 h1 {
