path query filename

--- a/client/templates/sounder.html
+++ b/client/templates/sounder.html
@@ -24,7 +24,7 @@
 
 
 <template name="controls">
-  <div id="controlsWrap" class="controls open">
+  <div id="controlsWrap" class="controls">
     <a href="#" class="opener" id="controlsOpener">o</a>
 
     <div id="playlist" class="playlist"></div>
